syntax = "proto3";

package metrics;
option go_package = "proto/metrics";

message Metric {
    string id = 1;
    Type type = 2;
    double value = 3;
    int64 delta = 4;
}

enum Type {
    counter = 0;
    gauge = 1;
}

service MetricsService {
    rpc GetOne(GetOneRequest) returns (GetOneResponse) {}
    rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc UpdateBatch(UpdateBatchRequest) returns (UpdateBatchResponse) {}
}

message GetOneRequest {
    string id = 1;
    Type type = 2;
}

message GetOneResponse {
    Metric metric = 1;
}

message GetAllRequest {}

message GetAllResponse {
    repeated Metric metrics = 1;
}

message UpdateRequest {
    Metric metric = 1;
}

message UpdateResponse {}

message UpdateBatchRequest {
    repeated Metric metrics = 1;
}

message UpdateBatchResponse {}
